--- a/notebooks/colab_quickstart.ipynb
+++ b/notebooks/colab_quickstart.ipynb
@@ -49,8 +49,8 @@
       "outputs": [],
       "source": [
         "# Clone the repository\n",
-        "!git clone https://github.com/yourusername/lofi-video-generator.git\n",
-        "%cd lofi-video-generator"
+        "!git clone https://github.com/misterciput/vidgenai.git\n",
+        "%cd vidgenai"
       ]
     },
     {
@@ -83,9 +83,9 @@
       "outputs": [],
       "source": [
         "import sys\n",
-        "sys.path.append('/content/lofi-video-generator/src')\n",
+        "sys.path.append('/content/vidgenai/src')\n",
         "\n",
-        "from lofi_video_generator import LoFiVideoGenerator\n",
+        "from vidgenai import LoFiVideoGenerator\n",
         "from google.colab import files\n",
         "import os\n",
         "import torch\n",
@@ -439,9 +439,10 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -449,8 +450,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
